<resources>
    <string name="app_name">Tip Calculator App</string>
    <string name="author">Dion Potkamp v2.0.0</string>

    <string name="price_label">Price: $</string>
    <string name="tip_seekbar_label">100%</string>
    <string name="don_t_split">Don\'t split</string>
    <string name="split_over">Split over: </string>
    <string name="tip_amount">Tip Amount</string>
    <string name="total_cost">Total Cost</string>
    <string name="per_person">Per Person</string>
    <string name="zero_dollar">$0.00</string>
    <string name="how_much_tip">How much % tip?</string>
    <string name="want_to_split">Do you want to split the cost?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="clear_settings_dialog_message">You have cleared multiple times.\nYou can change the default values in the settings.</string>
    <string name="settings_subtitle">Change the values to get them automatically applied on startup.</string>
    <string name="save_and_go_back">Save &amp; Go Back</string>
</resources>